debug/k8s/wordpress.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  namespace: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: wordpress
  labels:
    app: wordpress
    tier: mysql
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - image: docker.io/library/mysql:5.7
          name: mysql
          args:
            - "--ignore-db-dir=lost+found"
          ports:
            - containerPort: 3306
              name: mysql
          resources:
            limits:
              cpu: 1000m
              memory: "1Gi"
            requests:
              cpu: 10m
              memory: "16Mi"
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          emptyDir:
            sizeLimit: 500Mi
# Replace emptyDir with below to test pvc
#           persistentVolumeClaim:
#             claimName: mysql-pv-claim
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: mysql-pv-claim
#   namespace: wordpress
#   labels:
#     app: wordpress
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 20Gi
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  # Uncomment to test Loadbalencers
  # type: LoadBalancer


# Uncomment to test ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    tier: frontend
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
spec:
  ingressClassName: cilium
  rules:
    - host: wordpress.svc.vyas-n.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: wordpress
                port:
                  number: 80
  tls:
    - hosts:
        - wordpress.svc.vyas-n.dev
      # cert-manager will create this
      secretName: wordpress.svc.vyas-n.dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
    tier: frontend
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          resources:
            limits:
              cpu: 1000m
              memory: "1Gi"
            requests:
              cpu: 10m
              memory: "16Mi"
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          emptyDir:
            sizeLimit: 500Mi
# Replace emptyDir with below to test pvc
#           persistentVolumeClaim:
#             claimName: wp-pv-claim
# ---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: wp-pv-claim
#   namespace: wordpress
#   labels:
#     app: wordpress
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 20Gi
